# job_agent

./: .env.example  .gitignore  LICENSE  README.md  board_registry.json  pyproject.toml
docs/: architecture.md
docs/codex_tasks/: 00_global_rules.md  limitations.md
src/job_agent/: __init__.py  config.py  logging.py  main.py
src/job_agent/browser/: __init__.py  (+2 more)
static/: dashboard.css
templates/: job_detail.html  jobs.html
tests/: test_board_registry.py  test_browser_fetch.py  test_browser_session.py  test_browser_smoke.py  test_config_queries.py  test_dashboard_routes.py  test_debug_artifacts.py  test_dedupe.py  test_discover_flow.py  test_discover_integration.py  test_discovery_telemetry.py  test_greenhouse_detail_parser.py  test_greenhouse_pagination.py  test_greenhouse_parser.py  test_hard_filters.py  test_indeed_parser.py  test_intent_parser.py  test_lever_detail_parser.py  test_lever_pagination.py  test_lever_parser.py  test_linkedin_parser.py  test_models.py  test_open_command.py  test_plan_compiler.py  test_prompt_search_explanations.py  test_prompt_search_flow.py  test_recalculate_scores.py  test_registry_cli.py  test_review_cli.py  test_review_decision_cli.py  test_review_decisions.py  test_saved_searches.py  test_scoring.py  test_search_cli.py  test_site_base.py  test_smoke.py  test_stale_jobs.py  test_storage.py  test_summarizer.py
tests/fixtures/: greenhouse_job_detail_sample.html  greenhouse_jobs_sample.html  indeed_jobs_sample.html  lever_job_detail_sample.html  lever_jobs_sample.html  linkedin_job_detail_sample.html  linkedin_jobs_sample.html
(+25 files in other folders)
